# adk-rust

./: .devenv.flake.nix  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  A2UI_DEMO_COMPLETE.md  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTENDED_CATALOG.md  GENAI_DEPENDENCY_ANALYSIS.md  GO_A2A_IMPLEMENTATION.md  GO_TO_RUST_MAPPING.md  IMPLEMENTATION_PLAN.md  LICENSE  LLMAGENT_PROGRESS.md  MCP_IMPLEMENTATION_PLAN.md  Makefile  PHASE_10_PLAN.md  PHASE_3_PROGRESS.md  PHASE_7_PROGRESS.md  PHASE_8_ANALYSIS.md  PHASE_8_PROGRESS.md  PHASE_9_PROGRESS.md  PRODUCTION_CLIENT.md  PUBLISHING.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  STABILITY.md  TASK_1.4_VERIFICATION.md  UPCOMING_TASKS_ANALYSIS.md  WORKFLOW_AGENTS_COMPLETE.md  all_validation_tests.txt  build_check.sh  build_check_output.txt  build_errors.txt  (+46 more)
adk-acp/: Cargo.toml  README.md
adk-acp/src/: connection.rs  error.rs  host.rs  lib.rs  permissions.rs  session.rs  streaming.rs  tool.rs  toolset.rs
adk-action/: Cargo.toml  README.md
adk-action/src/: error.rs  interpolation.rs  lib.rs  types.rs
adk-action/tests/: interpolation_property_tests.rs  roundtrip_property_tests.rs
adk-agent/: Cargo.toml  EXAMPLE_VALIDATION.md  README.md
adk-agent/examples/: agent_control_demo.rs  gemini_openai_compat_agent.rs  state_management_demo.rs  telemetry_demo.rs
adk-agent/src/: compaction.rs  custom_agent.rs  guardrails.rs  lib.rs  llm_agent.rs  tool_call_markup.rs  util.rs
adk-agent/tests/: agent_callback_tests.rs  callback_integration_test.rs  callback_integration_tests.rs  callback_tests.rs  compaction_tests.rs  context_propagation_test.rs  custom_agent_tests.rs  integration_test.rs  llm_agent_tests.rs  mcp_integration_test.rs  multi_agent_test.rs  review_regression_tests.rs  shared_state_integration_tests.rs  streaming_test.rs  test_context.rs  tool_callback_tests.rs  tool_confirmation_tests.rs  workflow_tests.rs
adk-anthropic/: Cargo.toml  LICENSE  README.md
adk-anthropic/examples/: basic.rs  caching.rs  citations.rs  compaction.rs  context_editing.rs  custom_base_url.rs  fast_mode.rs  managed_agents_custom_tools.rs  managed_agents_files.rs  managed_agents_hello.rs  managed_agents_memory.rs  managed_agents_multiagent.rs  pdf_processing.rs  stop_reasons.rs  streaming.rs  structured_output.rs  thinking.rs  token_counting.rs  tools.rs  vision.rs
adk-anthropic/src/: accumulating_stream.rs  backoff.rs  cache_control.rs  client.rs  client_logger.rs  error.rs  json_schema.rs  lib.rs  observability.rs  pricing.rs  sse.rs  tool_search.rs
adk-anthropic/tests/: files_integration.rs  managed_agents_dreams_integration.rs  managed_agents_files_integration.rs  managed_agents_integration.rs  managed_agents_memory_integration.rs  managed_agents_vaults_integration.rs  managed_agents_webhooks_integration.rs
adk-artifact/: Cargo.toml  README.md
adk-artifact/src/: file.rs  inmemory.rs  lib.rs  scoped.rs  service.rs
adk-artifact/tests/: artifact_tests.rs
adk-audio/: Cargo.toml  README.md
adk-audio/src/: bridge.rs  codec.rs  error.rs  frame.rs  lib.rs  mixer.rs  registry.rs
adk-audio/tests/: bug_condition_silent_streams_test.rs  codec_capability_tests.rs  error_context_tests.rs  frame_property_tests.rs  fxchain_property_tests.rs  mixer_property_tests.rs  model_registry_tests.rs  pipeline_property_tests.rs  preservation_batch_transcription_test.rs  sentence_chunker_tests.rs  tool_schema_tests.rs  vad_gating_tests.rs  wav_codec_property_tests.rs
adk-auth/: Cargo.toml  README.md
adk-auth/src/: access_control.rs  audit.rs  auth_bridge.rs  error.rs  lib.rs  middleware.rs  scope.rs
adk-auth/tests/: access_control_property_tests.rs  rbac_integration.rs  scope_integration.rs  secret_cache_property_tests.rs  secret_error_property_tests.rs  sso_integration.rs
adk-awp/: Cargo.toml  README.md  business.toml
adk-awp/src/: config.rs  consent.rs  detect.rs  discovery.rs  error_response.rs  events.rs  handlers.rs  health.rs  lib.rs  loader.rs  manifest.rs  middleware.rs  rate_limit.rs  router.rs  state.rs  trust.rs
adk-awp/tests/: conformance_tests.rs
adk-bench/: Cargo.toml  README.md
adk-bench/harnesses/: bench_gemini_sdk.py  bench_langgraph.py  external-frameworks.json  simple_tool_call.json
adk-bench/src/: config.rs  error.rs  external.rs  formatter.rs  instrumented_llm.rs  lib.rs  memory.rs  metrics.rs  runner.rs  workload.rs
adk-browser/: Cargo.toml  README.md
adk-browser/src/: config.rs  escape.rs  lib.rs  pool.rs  session.rs  toolset.rs
adk-cli/: Cargo.toml  README.md
adk-cli/src/: cli.rs  config.rs  console.rs  deploy.rs  launcher.rs  lib.rs  main.rs  optimize.rs  serve.rs  setup.rs
adk-code/: Cargo.toml  README.md
adk-code/src/: a2a_compat.rs  code_tool.rs  compat.rs  container.rs  diagnostics.rs  embedded_js.rs  error.rs  executor.rs  harness.rs  lib.rs  rust_executor.rs  rust_sandbox.rs  types.rs  wasm_guest.rs  workspace.rs
adk-code/tests/: backend_isolation_property_tests.rs  code_tool_integration.rs  collaboration_property_tests.rs  container_isolation_property_tests.rs  executor_tests.rs  metadata_property_tests.rs  property_tests.rs  rust_executor_integration.rs  rust_sandbox_property_tests.rs  wasm_guest_property_tests.rs
adk-codeact-monty/: Cargo.toml  README.md  rust-toolchain.toml
adk-codeact-monty/src/: convert.rs  lib.rs  os_access.rs  prompt.rs  runtime.rs
adk-codeact-monty/tests/: drive_script.rs
adk-computer-use/: Cargo.toml  README.md
adk-computer-use/examples/: live_clipboard.rs  (+4 more)
adk-core/: Cargo.toml  README.md
adk-deploy/: Cargo.toml  README.md
adk-deploy-console/: Cargo.toml
adk-deploy-server/: Cargo.toml
adk-doc-audit/: CONFIGURATION.md  Cargo.toml  README.md
adk-eval/: Cargo.toml  README.md
adk-graph/: Cargo.toml  README.md
adk-guardrail/: Cargo.toml  README.md
adk-macros/: Cargo.toml
adk-memory/: Cargo.toml  README.md
adk-mistralrs/: Cargo.toml  README.md
adk-model/: Cargo.toml  README.md
adk-payments/: Cargo.toml  README.md
adk-plugin/: Cargo.toml  README.md
adk-rag/: Cargo.toml  README.md
(+2401 files in other folders)
