[workspace]
resolver = "2"
members = [
    # Core packages (publishable to crates.io)
    "adk-core",
    "adk-agent",
    "adk-model",
    "adk-tool",
    "adk-runner",
    "adk-server",
    "adk-session",
    "adk-artifact",
    "adk-memory",
    "adk-cli",
    "adk-realtime",
    "adk-graph",
    "adk-browser",
    "adk-eval",
    "adk-ui",
    "adk-telemetry",
    "adk-guardrail",
    "adk-auth",
    "adk-plugin",
    "adk-skill",
    "adk-studio",
    "adk-rust",
    "adk-gemini",
    "adk-doc-audit",

    # Development packages (not published)
    "examples",
    "examples/ralph",
    "examples/ralph_autonomous_agent",
    "docs/official_docs_examples/quickstart_test", "docs/official_docs_examples/agents/llm_agent_test",
    "docs/official_docs_examples/tools/mcp_test",
    "docs/official_docs_examples/sessions/sessions_test",
    "docs/official_docs_examples/callbacks/callbacks_test",
    "docs/official_docs_examples/artifacts/artifacts_test",
    "docs/official_docs_examples/events/events_test",
    "docs/official_docs_examples/observability/telemetry_test",
    "docs/official_docs_examples/deployment/launcher_test",
    "docs/official_docs_examples/deployment/a2a_test",
    "docs/official_docs_examples/evaluation/eval_test",
    "docs/official_docs_examples/security/auth_test",
    "docs/official_docs_examples/security/guardrails_test",
    "docs/official_docs_examples/security/memory_test",
    "docs/official_docs_examples/studio/studio_test",
    "docs/official_docs_examples/core/core_test",
    "docs/official_docs_examples/core/runner_test",
    "docs/official_docs_examples/cli/cli_test",
    "docs/official_docs_examples/eval/eval_readme_test",
    "docs/official_docs_examples/graph/graph_readme_test",
    "docs/official_docs_examples/guardrail/guardrail_readme_test",
    "docs/official_docs_examples/realtime/realtime_readme_test",
    "docs/official_docs_examples/readme_validation",
]
exclude = [
    # Git-only packages with GPU dependencies (build explicitly with: cargo build -p adk-mistralrs)
    # Excluded to prevent --all-features from failing without CUDA toolkit
    "adk-mistralrs",

    # Reference implementations (not part of workspace)
    "reference/adk-go",
    "reference/mcp-rust-sdk",
    "reference/gemini-rust",
    # Learning materials (gitignored, not part of CI)
    "learning",
]

[profile.dev]
debug = 1
split-debuginfo = "packed"

[profile.release]
strip = true
opt-level = 3
lto = true

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
homepage = "https://www.zavora.ai"
repository = "https://github.com/zavora-ai/adk-rust"

[workspace.dependencies]
# External dependencies
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
livekit = { version = "0.7.30", default-features = false, features = ["rustls-tls-native-roots", "tokio"] }
livekit-api = { version = "0.3", default-features = false, features = ["rustls-tls-native-roots"] }

# ADK internal crates (use { workspace = true } in member crates)
adk-core = { path = "adk-core", version = "0.3.0" }
adk-agent = { path = "adk-agent", version = "0.3.0" }
adk-model = { path = "adk-model", version = "0.3.0" }
adk-tool = { path = "adk-tool", version = "0.3.0" }
adk-runner = { path = "adk-runner", version = "0.3.0" }
adk-server = { path = "adk-server", version = "0.3.0" }
adk-session = { path = "adk-session", version = "0.3.0" }
adk-artifact = { path = "adk-artifact", version = "0.3.0" }
adk-memory = { path = "adk-memory", version = "0.3.0" }
adk-cli = { path = "adk-cli", version = "0.3.0" }
adk-realtime = { path = "adk-realtime", version = "0.3.0" }
adk-graph = { path = "adk-graph", version = "0.3.0" }
adk-browser = { path = "adk-browser", version = "0.3.0" }
adk-eval = { path = "adk-eval", version = "0.3.0" }
adk-ui = { path = "adk-ui", version = "0.3.0" }
adk-telemetry = { path = "adk-telemetry", version = "0.3.0" }
adk-guardrail = { path = "adk-guardrail", version = "0.3.0" }
adk-auth = { path = "adk-auth", version = "0.3.0" }
adk-plugin = { path = "adk-plugin", version = "0.3.0" }
adk-skill = { path = "adk-skill", version = "0.3.0" }
adk-studio = { path = "adk-studio", version = "0.3.0" }
adk-gemini = { path = "adk-gemini", version = "0.3.0" }
adk-doc-audit = { path = "adk-doc-audit", version = "0.3.0" }
