[workspace]
resolver = "2"
members = [
    # Core packages (publishable to crates.io)
    "adk-core",
    "adk-rust-macros",
    "adk-agent",
    "adk-model",
    "adk-tool",
    "adk-runner",
    "adk-server",
    "adk-session",
    "adk-artifact",
    "adk-memory",
    "adk-cli",
    "adk-realtime",
    "adk-graph",
    "adk-browser",
    "adk-eval",
    "adk-telemetry",
    "adk-guardrail",
    "adk-auth",
    "adk-plugin",
    "adk-skill",
    "adk-rust",
    "adk-gemini",
    "adk-code",
    "adk-devtools",
    "adk-sandbox",
    "adk-rag",
    "adk-audio",
    "adk-deploy",
    "adk-payments",
    "adk-action",
    "adk-anthropic",
    "adk-retry-reflect",

    # AWP protocol crates
    "awp-types",
    "adk-awp",

    # ACP integration
    "adk-acp",

    # CLI tools
    "cargo-adk",

    # Repo-internal task runner (publish = false, never published)
    "xtask",

    # Local LLM inference (now publishable - mistralrs on crates.io)
    "adk-mistralrs",

    # Managed agent runtime
    "adk-managed",

    # Enterprise client SDK
    "adk-enterprise",

    # Benchmarking framework
    "adk-bench",
]
exclude = [
    # Extracted to standalone repo: https://github.com/zavora-ai/adk-studio
    "adk-studio",

    # Python CodeRuntime for the CodeAgent — its own workspace because it depends
    # on `monty` via git (not yet on crates.io).
    "adk-codeact-monty",

    # Standalone example crates (have their own [workspace] key)
    "examples/enterprise_custom_tool",
    "examples/enterprise_hello",
    "examples/eval_showcase",

    # Reference implementations (not part of workspace)
    "reference/adk-go",
    "reference/mcp-rust-sdk",
    "reference/gemini-rust",
    # Learning materials (gitignored, not part of CI)
    "learning",
]

[profile.dev]
debug = 1                    # Line tables only — faster builds, still get backtraces
split-debuginfo = "packed"
incremental = true           # Faster recompilation on code changes
opt-level = 0                # No optimization in dev — fastest compile

[profile.dev.package."*"]
opt-level = 1                # Slight optimization for dependencies (they rarely change)
debug = false                # No debug info for deps — saves link time

[profile.release]
strip = true
opt-level = 3
lto = true

# Fast example builds: no debug info, max codegen parallelism
# Usage: cargo build --examples --profile example-dev
[profile.example-dev]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 256
incremental = true

[profile.example-dev.package."*"]
incremental = false
opt-level = 1

# CI profile: like release but faster to compile (no LTO)
[profile.ci]
inherits = "release"
lto = false
strip = false
opt-level = 2

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "Apache-2.0"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
homepage = "https://www.zavora.ai"
repository = "https://github.com/zavora-ai/adk-rust"

[workspace.dependencies]
# External dependencies
tokio = { version = "1.40", default-features = false }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.31"
# Unify rustls crypto provider to 'aws-lc-rs' across the workspace.
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots", "connect"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots", "multipart"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"
livekit = { version = "0.7.36", default-features = false, features = ["tokio", "native-tls"] }
livekit-api = { version = "0.4.18", default-features = false, features = ["signal-client-tokio", "services-tokio", "access-token"] }

# ADK internal crates (use { workspace = true } in member crates)
adk-core = { path = "adk-core", version = "2.0.0" }
adk-rust-macros = { path = "adk-rust-macros", version = "2.0.0" }
adk-agent = { path = "adk-agent", version = "2.0.0", default-features = false }
adk-model = { path = "adk-model", version = "2.0.0", default-features = false }
adk-tool = { path = "adk-tool", version = "2.0.0" }
adk-runner = { path = "adk-runner", version = "2.0.0", default-features = false }
adk-server = { path = "adk-server", version = "2.0.0" }
adk-session = { path = "adk-session", version = "2.0.0" }
adk-artifact = { path = "adk-artifact", version = "2.0.0" }
adk-memory = { path = "adk-memory", version = "2.0.0" }
adk-cli = { path = "adk-cli", version = "2.0.0", default-features = false }
adk-realtime = { path = "adk-realtime", version = "2.0.0" }
adk-graph = { path = "adk-graph", version = "2.0.0" }
adk-browser = { path = "adk-browser", version = "2.0.0" }
adk-eval = { path = "adk-eval", version = "2.0.0" }
adk-telemetry = { path = "adk-telemetry", version = "2.0.0" }
adk-guardrail = { path = "adk-guardrail", version = "2.0.0" }
adk-auth = { path = "adk-auth", version = "2.0.0" }
adk-plugin = { path = "adk-plugin", version = "2.0.0" }
adk-skill = { path = "adk-skill", version = "2.0.0" }
adk-gemini = { path = "adk-gemini", version = "2.0.0" }
adk-code = { path = "adk-code", version = "2.0.0" }
adk-devtools = { path = "adk-devtools", version = "2.0.0" }
adk-sandbox = { path = "adk-sandbox", version = "2.0.0" }
adk-rag = { path = "adk-rag", version = "2.0.0" }
adk-audio = { path = "adk-audio", version = "2.0.0" }
adk-mistralrs = { path = "adk-mistralrs", version = "2.0.0", default-features = false }
adk-deploy = { path = "adk-deploy", version = "2.0.0" }
adk-payments = { path = "adk-payments", version = "2.0.0" }
adk-action = { path = "adk-action", version = "2.0.0" }
adk-anthropic = { path = "adk-anthropic", version = "2.0.0" }
adk-managed = { path = "adk-managed", version = "2.0.0", default-features = false }
adk-enterprise = { path = "adk-enterprise", version = "2.0.0" }
adk-bench = { path = "adk-bench", version = "2.0.0" }
awp-types = { path = "awp-types", version = "2.0.0" }
adk-awp = { path = "adk-awp", version = "2.0.0" }
adk-acp = { path = "adk-acp", version = "2.0.0" }
