[package]
name = "adk-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent implementations for Rust Agent Development Kit (ADK-Rust, LLM, Custom, Workflow agents)"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-agent"
keywords = ["ai", "agent", "adk", "llm", "workflow"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
adk-core.workspace = true
adk-telemetry.workspace = true
adk-skill = { workspace = true, optional = true }
adk-guardrail = { workspace = true, optional = true }
adk-plugin = { workspace = true, optional = true }
adk-sandbox = { workspace = true, optional = true }
adk-devtools = { workspace = true, optional = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros"] }
futures = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
schemars = "1.0"
jsonschema = { version = "0.28", default-features = false }
cron = { version = "0.15", optional = true }
notify = { version = "8", optional = true }
axum = { version = "0.8", optional = true }

[features]
default = ["skills"]
guardrails = ["adk-guardrail"]
enhanced-plugins = ["dep:adk-plugin"]
skills = ["dep:adk-skill"]
sandbox = ["dep:adk-sandbox", "adk-sandbox/workspace"]
coding = ["dep:adk-devtools"]
codeact = []
record-payloads = []
ambient = ["dep:cron", "dep:notify", "dep:axum"]

[dev-dependencies]
# Internal dev-deps are path-only (no version) so cargo strips them from the
# published manifest — they can never block or reorder a crates.io publish.
adk-model = { path = "../adk-model", features = ["gemini", "gemini-interactions", "openai"] }
adk-runner = { path = "../adk-runner" }
adk-session = { path = "../adk-session" }
adk-tool = { path = "../adk-tool" }
anyhow = "1"
dotenvy = "0.15"
proptest = "1.5"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
