[package]
name = "adk-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Binary artifact storage for Rust Agent Development Kit (ADK-Rust) agents"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-artifact"
keywords = ["ai", "agent", "adk", "artifact", "storage"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
adk-core = { path = "../adk-core", version = "0.1.4" }
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
