[package]
name = "adk-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Binary artifact storage for Rust Agent Development Kit (ADK-Rust) agents"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-artifact"
keywords = ["ai", "agent", "adk", "artifact", "storage"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
adk-core.workspace = true
async-trait.workspace = true
moka = { version = "0.12", features = ["future"] }
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
