[package]
name = "adk-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Access control and authentication for Rust Agent Development Kit (ADK-Rust)"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-auth"
keywords = ["ai", "agent", "adk", "auth", "security"]
categories = ["authentication", "api-bindings"]
readme = "README.md"

[features]
default = []
sso = ["jsonwebtoken", "reqwest", "dashmap", "base64"]

[dependencies]
adk-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# SSO dependencies (optional)
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
dashmap = { version = "6", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
